fix(navbar): add pill shape behind active menu

--- a/src/app/container/navbar/navbar.module.css
+++ b/src/app/container/navbar/navbar.module.css
@@ -220,20 +220,22 @@
         visibility: hidden;
         max-height: 0;
         transition:
-            visibility 0.25s ease-in-out,
-            max-height 0.25s ease-in-out;
+            visibility 0.3s cubic-bezier(0.77, 0, 0.18, 1),
+            max-height 0.3s cubic-bezier(0.77, 0, 0.18, 1);
         position: absolute;
         overflow: hidden;
         width: 100vw;
         top: 56px;
+
+        --element-width: 250px;
     }
 
     .navbarMenu.collapse {
         visibility: visible;
         max-height: 750px;
         transition:
-            visibility 0.25s ease-in-out,
-            max-height 0.25s ease-in-out;
+            visibility 0.3s cubic-bezier(0.77, 0, 0.18, 1),
+            max-height 0.3s cubic-bezier(0.77, 0, 0.18, 1);
     }
 
     .navbarHamburger {
@@ -269,6 +271,19 @@
         display: flex;
         justify-content: center;
         gap: 0.5rem;
+        z-index: 1;
+    }
+
+    .navbarMenuItemLink::before {
+        content: '';
+        position: absolute;
+        top: -4px;
+        width: var(--element-width);
+        height: 40px;
+        border-radius: 50px;
+        background-color: transparent;
+        z-index: -1;
+        transition: background-color 0.25s ease-in-out;
     }
 
     .navbarMenuList {
@@ -300,7 +315,7 @@
         display: flex;
         flex-direction: column;
         padding: 0;
-        width: 230px;
+        width: var(--element-width);
         position: relative;
         gap: 1rem;
         border-radius: 20px;
@@ -309,7 +324,7 @@
         max-height: 0;
         overflow: hidden;
         animation: 0.3s cubic-bezier(0.77, 0, 0.18, 1) closeSubmenu;
-        margin-block-start: 0.5rem;
+        margin-block-start: 0;
     }
 
     .navbarSubmenusLink {
@@ -326,6 +341,11 @@
         animation: 0.3s cubic-bezier(0.77, 0, 0.18, 1) openSubmenu;
         max-height: 400px;
         padding: 1rem;
+        margin-block-start: 0.5rem;
+    }
+
+    .navbarMenuItem.opened .navbarMenuItemLink::before {
+        background-color: var(--primary-dark-active);
     }
 }
 
@@ -333,10 +353,12 @@
     from {
         max-height: 0;
         padding: 0;
+        margin-block-start: 0;
     }
     to {
         max-height: 400px;
         padding: 1rem;
+        margin-block-start: 0.5rem;
     }
 }
 
@@ -344,9 +366,11 @@
     from {
         max-height: 400px;
         padding: 1rem;
+        margin-block-start: 0.5rem;
     }
     to {
         max-height: 0;
         padding: 0;
+        margin-block-start: 0;
     }
 }
